# sara-raytracer

./: .gitattributes  .gitignore  LICENSE  README.md  benchmarks.py  box_original_16s.txt  box_original_fixed_cam.txt  box_original_out.txt  build_tinyobjloader.sh  chapter2.md  chapter2_run_baselines.sh  check_img.py  cluster_remote_run.sh  debug.txt  debug_3.txt  debug_camera.py  debug_camera_old.py  debug_intersection.txt  debug_miss.txt  debug_nodenoise.txt  debug_original_run.txt  debug_output.txt  debug_output_1440.txt  debug_output_run2.txt  debug_output_run3.txt  debug_output_run4.txt  debug_stats.txt  debug_stats_new.txt  debug_tests.txt  draw_img.py  extract_warp_divergence_local_manual.sh  fix_camera.py  fix_camera_final.py  fix_check.py  fix_intersection2.py  fix_intersection3.py  force_build.txt  full_output.txt  gpu1-cluster_remote_run.sh  no_bvh_run.txt  (+45 more)
box-advanced/: box-advanced.mtl  setup.json  src.txt
box-sphere-original/: setup.json
color-management/: acescg_to_srgb.npy  generate-lut.py  tonemapper-presentation.html
hw01/: camera.py  intersection.py  main.py  render_kernel.py  settings.py  shading.py
hw02/: bvh.py  camera.py  intersection.py  main.py  render_kernel.py  settings.py  setup_vectors.py  shading.py
report/: build_pdf.py  gen_graph.py  gen_graph_no_baseline.py  numba_raytracer.html  report-exported-markdown.html  report.html  report.md  report0.md  (+1 more)
src/: __init__.py  (+24 more)
utils/: CMakeLists.txt  __init__.py  kernel_manager.py  load_oidn_lib.py  obj_loader.py  ppm.py  py_tinyobj.cpp  smart_denoiser.py  vec_utils.py
utils/lib/: .gitkeep
(+31 files in other folders)
